--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,4 +1,5 @@
 @import "../../scss/_reset.scss";
+@import "../../scss/variables.scss";
 
 .orange-button {
   width: 100%;
@@ -6,6 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: orange;
+  background-color: $orange;
   color: white;
 }
