--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -8,6 +8,7 @@
   color: black;
   background-color: #fff;
   border: 1px solid #ccc;
+  font-family: $main-font;
   :hover {
     border: 1px solid $orange;
   }
