--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,1 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Poppins:ital,wght@0,500;0,600;1,600&display=swap");
+
 $orange: hsla(27, 100%, 49%, 0.87);
+$main-font: "Open Sans", sans-serif;
+$secondary-font: "Poppins", sans-serif;
