feat: top section added

--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -8,6 +8,7 @@
   color: black;
   background-color: #fff;
   border: 1px solid #ccc;
+  border-radius: 12px;
   font-family: $main-font;
   :hover {
     border: 1px solid $orange;
