--- a/src/pages/Search/style.scss
+++ b/src/pages/Search/style.scss
@@ -17,8 +17,44 @@
 }
 .top-container {
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 70%;
+  margin: 80px auto 0 auto;
+}
+.title {
+  font-size: 30px;
+  font-weight: 700;
+  font-family: $main-font;
+}
+.description {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: $main-font;
 }
 .search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 40px;
 }
+.input-container {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.buttons-container {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .footer {
 }
