--- a/src/layouts/MovieSection/style.scss
+++ b/src/layouts/MovieSection/style.scss
@@ -5,19 +5,55 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
+  gap: 40px;
   width: 80%;
   margin: 80px auto 0 auto;
+  h2 {
+    font-size: 30px;
+    font-weight: 700;
+    font-family: $main-font;
+  }
+  h3 {
+    font-size: 20px;
+    font-weight: 700;
+    font-family: $main-font;
+  }
+  p {
+    font-size: 20px;
+    font-weight: 400;
+    font-family: $main-font;
+  }
 }
 .movie-details-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 20px;
 }
-.movie-title {
-}
-.movie-description {
+.movie-actor {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
 }
 .movie-rating {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 12px;
 }
 .movie-favorite {
+  width: 60%;
 }
 .movie-poster {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
 }
