--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,5 +1,17 @@
 @import "../../scss/_reset.scss";
 @import "../../scss/variables.scss";
-
 .footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 90px;
+  background-color: $orange;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  color: white;
+  font-family: $main-font;
+  font-size: 16px;
+  font-weight: 400;
 }
