--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,7 +1,6 @@
 @import "../../scss/_reset.scss";
 @import "../../scss/variables.scss";
 .footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
   height: 90px;
@@ -14,4 +13,5 @@
   font-family: $main-font;
   font-size: 16px;
   font-weight: 400;
+  margin-top: 90px;
 }
