--- a/src/layouts/MovieSection/style.scss
+++ b/src/layouts/MovieSection/style.scss
@@ -48,12 +48,19 @@
   width: 60%;
 }
 .movie-poster {
-  width: 20%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
   img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
+  }
+  img:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
   }
 }
