--- a/src/layouts/SearchSection/style.scss
+++ b/src/layouts/SearchSection/style.scss
@@ -27,12 +27,20 @@
   justify-content: space-between;
   width: 100%;
   gap: 40px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 .input-container {
   width: 60%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 .buttons-container {
   width: 40%;
@@ -40,4 +48,8 @@
   align-items: center;
   justify-content: space-between;
   gap: 20px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
