refactor(style): add button font-size

--- a/src/components/FavoriteButton/style.scss
+++ b/src/components/FavoriteButton/style.scss
@@ -1,6 +1,10 @@
 @import "../../scss/_reset.scss";
+@import "../../scss/variables.scss";
 
 .toggle-button {
   width: 60%;
   height: 60px;
+  font-family: $main-font;
+  font-size: 20px;
+  font-weight: 700;
 }
