--- a/src/components/FavoriteButton/style.scss
+++ b/src/components/FavoriteButton/style.scss
@@ -7,4 +7,18 @@
   font-family: $main-font;
   font-size: 20px;
   font-weight: 700;
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
+.mobile-toggle-button {
+  display: none;
+  @media (max-width: 768px) {
+    display: block;
+    width: 60%;
+    height: 60px;
+    font-family: $main-font;
+    font-size: 20px;
+    font-weight: 700;
+  }
 }
