--- a/src/layouts/MovieSection/style.scss
+++ b/src/layouts/MovieSection/style.scss
@@ -37,6 +37,9 @@
   align-items: flex-start;
   justify-content: center;
   gap: 20px;
+  @media (max-width: 768px) {
+    gap: 30px;
+  }
 }
 .movie-title {
   @media (max-width: 768px) {
@@ -60,6 +63,13 @@
 }
 .movie-favorite {
   width: 60%;
+  // center the button on mobile
+  @media (max-width: 768px) {
+    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .desktop-movie-poster {
   display: flex;
