--- a/src/layouts/MovieSection/style.scss
+++ b/src/layouts/MovieSection/style.scss
@@ -39,6 +39,7 @@
   gap: 20px;
   @media (max-width: 768px) {
     gap: 30px;
+    align-items: center;
   }
 }
 .movie-title {
@@ -60,10 +61,12 @@
   align-items: center;
   justify-content: flex-start;
   gap: 12px;
+  @media (max-width: 768px) {
+    align-self: flex-start;
+  }
 }
 .movie-favorite {
   width: 60%;
-  // center the button on mobile
   @media (max-width: 768px) {
     align-self: center;
     display: flex;
