--- a/src/layouts/MovieSection/style.scss
+++ b/src/layouts/MovieSection/style.scss
@@ -39,7 +39,7 @@
   gap: 20px;
   @media (max-width: 768px) {
     gap: 30px;
-    align-items: center;
+    align-items: flex-start;
   }
 }
 .movie-title {
@@ -99,6 +99,7 @@
 }
 .mobile-movie-poster {
   display: none;
+  align-self: center;
 
   @media (max-width: 768px) {
     display: flex;
